--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.3",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "dotenv": "^16.4.5",
     "dotgitignore": "^2.1.0",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
