--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
