Proper error handling in tyhe user and Profile Controller

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 
+# DBURL = mongodb://localhost:27017/lexmingDB
 
 DBURL = mongodb+srv://quiz_user:sylvic88@glareminddb.pavz3.mongodb.net/lexmingDB
 SESSION_SECRETE = somesecretehere
