--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # DBURL = mongodb://localhost:27017/lexmingDB
 
-DBURL = mongodb+srv://quiz_user:sylvic88@glareminddb.pavz3.mongodb.net/lexmingDB
-SESSION_SECRETE = somesecretehere
-EMAIL_ADDRESS = support@talktheall.com.ng
-EMAIL_PASSWORD = Sylvic@88
+DBURL = 
+SESSION_SECRETE = 
+EMAIL_ADDRESS = 
+EMAIL_PASSWORD = 
